Change app title.

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
       <link rel="preload" href="<%= htmlWebpackPlugin.files.css[chunk] %>" as="style" onload="this.rel='stylesheet'">
     <% } %>
 
-    <title>App name</title>
+    <title>Milos Lekic</title>
   </head>
 
   <body>
